<resources>
    <string name="app_name">AndroidTask</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="terms">By signing up, you\'re agree to our Terms &amp; Conditions and Privacy Policy</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes">Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="note_title">Note title</string>
    <string name="note_subtitle">Note subtitle</string>
    <string name="note_description">Note description</string>
    <string name="web_url">Web URL</string>
    <string name="http">http://</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete_note">Delete Note</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="log_out">Log out</string>


</resources>