<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorNoteColor4" />

    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorNoteColor4" />


    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:autofillHints="N/A"
        android:background="@drawable/bg_border"
        android:ellipsize="end"
        android:fontFamily="@font/ubuntu_medium"
        android:hint="@string/note_title"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBack" />


    <TextView
        android:id="@+id/tvDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:ellipsize="end"
        android:fontFamily="@font/ubuntu_medium"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorTextOther"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNoteTitle" />


    <EditText
        android:id="@+id/etNoteSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:autofillHints="N/A"
        android:background="@drawable/bg_border"
        android:ellipsize="end"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/note_subtitle"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDateTime" />

    <RelativeLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/etNoteDesc">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgNote"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:riv_corner_radius="@dimen/_8sdp"
            android:contentDescription="@string/app_name"
           />


    </RelativeLayout>


    <EditText
        android:id="@+id/etNoteDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:autofillHints="N/A"
        android:background="@drawable/bg_border"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/note_description"
        android:inputType="textMultiLine"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNoteSubTitle" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgMore"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/img_bar" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>